== master

* Release gems via rake-gemcutter instead of rubyforge
* By default, sort emails newest first

== 0.3.0 / 2009-04-19

* Add compatibility with has_messages 0.4.0 / Rails 2.3

== 0.2.1 / 2009-01-11

* Add compatibility with has_messages 0.3.1 / state_machine 0.5.0

== 0.2.0 / 2008-12-14

* Remove the PluginAWeek namespace

== 0.1.4 / 2008-10-26

* Add compatibility with has_messages 0.2.0
* Change how the base module is included to prevent namespacing conflicts

== 0.1.3 / 2008-09-07

* Add compatibility with state_machine 0.3.0

== 0.1.2 / 2008-06-29

* Add compatibility with has_messages 0.1.2

== 0.1.1 / 2008-06-22

* Remove log files from gems

== 0.1.0 / 2008-05-05

* Update to latest has_messages api
* Simplify by removing support for models other than EmailAddresses in Emails
* Updated documentation

== 0.0.1 / 2007-09-26

* Refactor has_email_address/has_email_addresses so that new associations for unsent/sent emails isn't created for has_email_address
* Add state changes fixtures for tests
* Add tests for ApplicationMailer
* Add support for tracking the original email address for senders/recipients even if the email address changes on the associated model (i.e. EmailAddress/User/etc.)
* Support converting models with an email_address/email_addresses association
* Allow the sender of emails to be an arbitrary string email address
* Add documentation
* Move test fixtures out of the test application root directory
* Convert dos newlines to unix newlines
* Update against latest changes to has_messages